syntax = "proto3";

option csharp_namespace = "SPbSTU.OPD.ASAP.Core.Presentation";

package google_grpc;

service SpreadSheetsService {
  rpc CreateSpreadSheets (CreateSpreadSheetsRequest) returns (CreateSpreadSheetsResponse);
}

message CourseGrpc {
  int64 id = 1;
  string title = 2;
  repeated StudentGrpc student_list = 3;
  repeated AssignmentGrpc assignment_list = 4;
}

message StudentGrpc {
  int64 id = 1;
  string name = 2;
}

message AssignmentGrpc {
  int64 id = 1;
  string title = 2;
}

message CoursePositionGrpc {
  int64 id = 1;
  string title = 2;
  string spreadsheet_id = 3;
  string points_spreadsheet_link = 4;
  repeated StudentPositionGrpc student_position_list = 5;
  repeated AssignmentPositionGrpc assignment_position_list = 6;
}

message StudentPositionGrpc {
  int64 id = 1;
  string name = 2;
  string cell = 3;
}

message AssignmentPositionGrpc {
  int64 id = 1;
  string title = 2;
  string cell = 3;
  string queue_spreadsheet_link = 4;
  string queue_spreadsheet_id = 5;
}

message CreateSpreadSheetsRequest {
  repeated CourseGrpc course_list = 1;
}

message CreateSpreadSheetsResponse {
  repeated CoursePositionGrpc course_position_list = 1;
}